# BADA

./: .gitignore  README.md  dadadklasdklasklds.yaml
Audio/: audio_test2.py
Bada/: CMakeLists.txt  package.xml
Bada/include/: bada.h
Bada/src/: bada.cpp  motor_ctrl.cpp
Documentation/: 2dnav_launch_step.md  git.md  kill_all.sh  launch_step.md  pip_list.txt  ros-msgs.md  run_all.sh  run_bada_duino.sh  run_bada_eyes.sh  setup-ubuntu.sh  setup_catkin.sh  setup_ros.sh  venv_pipList.txt
Documentation/maps/: map.pgm  map.yaml
RobotCtrl/CtrlCode/: CMakeLists.txt  package.xml
RobotCtrl/CtrlCode/include/mobile_robot/: motor_algorithm.h
RobotCtrl/CtrlCode/msg/: motor_cmd.msg
RobotCtrl/CtrlCode/src/: motor_algorithm.cpp
RobotCtrl/PID_Ctrl/: PIDCtrl.ino
SLAM/launch/: rs_d400_and_t265.launch
Sound/: .gitignore  README.md  audio_ros.py  audio_test.py  audio_test2.py  bak.audio_test2.py  newfile.md  ros-test.py  test.py  yamnet-porting.md
Sound/signal_node/: CMakeLists.txt  package.xml
Visualization/: .gitignore  README.md  log.md
Visualization/node/: index.js  package-lock.json  package.json
Visualization/ros2d/: Apache2.md  README.md  package-lock.json  package.json
Visualization/viz-app/: package-lock.json  package.json
bada_2dnav/: CMakeLists.txt  costmap_common_params.yaml  package.xml
bada_2dnav/config/: costmap_common_params.yaml  frames.gv  (+5 more)
bada_base/: CMakeLists.txt  package.xml
bada_core/: CMakeLists.txt  README.md  package.xml
bada_duino/: DynX_Speed_control.ino  bada_display.ino  bada_duino.ino
bada_eyes/: CMakeLists.txt  bada_eyes.py  package.xml
bada_goal/: CMakeLists.txt  package.xml
bada_motor/: CMakeLists.txt  RED.c  package.xml
bag/: bag4.bag  bag6.bag  bag7.bag
bags/: 2020-04-13-03-48-36.bag  2020-04-13-03-50-01.bag  2020-04-13-04-05-28.bag
(+88 files in other folders)
